--- a/manager/templates/default/css/xtheme-modx.css
+++ b/manager/templates/default/css/xtheme-modx.css
@@ -22,6 +22,7 @@ em { font-style: italic; }
 
 .ext-el-mask {
     background-color: #C0C0C0;
+    z-index: 10;
 }
 
 .ext-el-mask-msg {
@@ -35,6 +36,7 @@ em { font-style: italic; }
     background-image:none;
     border-color:#A7A7A7;
     padding:5px;
+    z-index: 10;
 }
 .ext-el-mask-msg div {
     background-color:transparent;
